# ezytutors

./: Cargo.toml
tutor-db/: .env
tutor-db/src/: database.sql
tutor-db/src/iter2/: handlers.rs  routes.rs  state.rs
tutor-db/src/iter3/: db_access.rs  handlers.rs  iter3-test-clean.sql
tutor-db/src/iter4/: db_access.rs  handlers.rs
tutor-db/src/iter5/dbaccess/: course.rs  mod.rs
tutor-db/src/iter5/dbscripts/: course.sql
tutor-db/src/iter5/handlers/: course.rs  general.rs
tutor-db/src/iter5/models/: course.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  models.rs  routes.rs
